Добавляет картинки к портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,47 +32,47 @@
         </ul>
         <ul>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-1.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-2.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-3.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-4.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-5.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-6.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-7.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-8.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
           <li>
-            <a href=""></a>
+            <a href="./images/portfolilo/img-9.jpg"></a>
             <h2></h2>
             <p></p>
           </li>
