--- a/portfolio.html
+++ b/portfolio.html
@@ -32,49 +32,49 @@
         </ul>
         <ul>
           <li>
-            <a href="./images/portfolilo/img-1.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-1.jpg" alt="фото сотрудников" /></a>
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-2.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-2.jpg" alt="фото сотрудников" width="370px" /></a>
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p>Дизайн</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-3.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-3.jpg" alt="играют в баскетбол" width="370px" /></a>
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <p>Приложение</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-4.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-4.jpg" alt="логотип ресторана" width="370px" /></a>
+            <h2>Проект <span lang="en">Prime</span></h2>
+            <p>Маркетинг</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-5.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-5.jpg" alt="две коробки" width="370px" /></a>
+            <h2>Проект <span lang="en">Boxes</span></h2>
+            <p>Приложение</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-6.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-6.jpg" alt="монитор компьютера" width="370px" /></a>
+            <h2 lang="en">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-7.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-7.jpg" alt="разворот журнала" width="370px" /></a>
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
+            <p>Дизайн</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-8.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-8.jpg" alt="работает на ноутбуке" width="370px" /></a>
+            <h2>Проект <span lang="en">LAB</span></h2>
+            <p>Маркетинг</p>
           </li>
           <li>
-            <a href="./images/portfolilo/img-9.jpg"></a>
-            <h2></h2>
-            <p></p>
+            <a href=""><img src="./images/portfolilo/img-9.jpg" alt="фото сотрудников" width="370px" /></a>
+            <h2 lang="en">Growing Business</h2>
+            <p>Приложение</p>
           </li>
         </ul>
       </section>
