--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -23,6 +30,9 @@
     </header>
     <main>
       <section>
+        <!-- Спрятать заголовок h1 -->
+        <h1>Наши работы</h1>
+        <!-- Список кнопок -->
         <ul>
           <li><button type="button">Все</button></li>
           <li><button type="button">Веб-сайты</button></li>
@@ -30,6 +40,7 @@
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
+        <!-- Список ссылок на примеры  -->
         <ul>
           <li>
             <a href=""><img src="./images/portfolilo/img-1.jpg" alt="фото сотрудников" /></a>
@@ -37,42 +48,58 @@
             <p>Веб-сайт</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-2.jpg" alt="фото сотрудников" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-2.jpg" alt="фото сотрудников" width="370px"
+            /></a>
             <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-3.jpg" alt="играют в баскетбол" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-3.jpg" alt="играют в баскетбол" width="370px"
+            /></a>
             <h2>Ресторан <span lang="en">Seafood</span></h2>
             <p>Приложение</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-4.jpg" alt="логотип ресторана" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-4.jpg" alt="логотип ресторана" width="370px"
+            /></a>
             <h2>Проект <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-5.jpg" alt="две коробки" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-5.jpg" alt="две коробки" width="370px"
+            /></a>
             <h2>Проект <span lang="en">Boxes</span></h2>
             <p>Приложение</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-6.jpg" alt="монитор компьютера" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-6.jpg" alt="монитор компьютера" width="370px"
+            /></a>
             <h2 lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-7.jpg" alt="разворот журнала" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-7.jpg" alt="разворот журнала" width="370px"
+            /></a>
             <h2>Издание <span lang="en">Limited Edition</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-8.jpg" alt="работает на ноутбуке" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-8.jpg" alt="работает на ноутбуке" width="370px"
+            /></a>
             <h2>Проект <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <a href=""><img src="./images/portfolilo/img-9.jpg" alt="фото сотрудников" width="370px" /></a>
+            <a href=""
+              ><img src="./images/portfolilo/img-9.jpg" alt="фото сотрудников" width="370px"
+            /></a>
             <h2 lang="en">Growing Business</h2>
             <p>Приложение</p>
           </li>
