--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="btn" type="button">Заказать услугу</button>
       </section>
       <!-- Секция Особенности -->
       <section>
