--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="navigation">
         <a class="logo" href="">Web<span style="color: #000000">Studio</span></a>
         <ul class="nav-list">
           <li><a class="nav-link" href="">Студия</a></li>
@@ -38,36 +38,36 @@
         <button class="btn" type="button">Заказать услугу</button>
       </section>
       <!-- Секция Особенности -->
-      <section>
+      <section class="features">
         <!-- заголовок h2 Особенности спрятать -->
         <h2>Особенности</h2>
-        <ul>
+        <ul class="features-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
       <!-- Секция примеры работ -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="examples">
+        <h2 class="examples-title">Чем мы занимаемся</h2>
+        <ul class="examples-list">
           <li>
             <img src="./images/job-samples/box-1.jpg" alt="печатает на компьютере" width="370" />
           </li>
@@ -80,28 +80,28 @@
         </ul>
       </section>
       <!-- Секция Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/team/team-card-1.jpg" alt="фото Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-list-title">Игорь Демьяненко</h3>
+            <p class="team-list-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/team/team-card-2.jpg" alt="фото Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-list-title">Ольга Репина</h3>
+            <p class="team-list-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team/team-card-3.jpg" alt="фото Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-list-title">Николай Тарасов</h3>
+            <p class="team-list-text" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/team/team-card-4.jpg" alt="фото Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-list-title">Михаил Ермаков</h3>
+            <p class="team-list-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
