Добавляет готовую Студия со стилями

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <ul class="features-list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="features-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
             <h3 class="features-title">Пунктуальность</h3>
@@ -60,7 +62,9 @@
           </li>
           <li>
             <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p class="features-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -106,12 +110,12 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer class="footer">
+      <a class="logo" href="">Web<span style="color: #ffffff">Studio</span></a>
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="footer-list">
+        <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
+        <li><a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
     </footer>
   </body>
