Добавляет готовую Portfolio со стилями

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navigation">
         <a class="logo" href="">Web<span style="color: #000000">Studio</span></a>
         <ul class="nav-list">
-          <li><a class="nav-link" href="">Студия</a></li>
+          <li><a class="nav-link current" href="">Студия</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
