--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,18 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="navigation">
+        <a class="logo" href="">Web<span style="color: #000000">Studio</span></a>
+        <ul class="nav-list">
+          <li><a class="nav-link" href="./index.html">Студия</a></li>
+          <li><a class="nav-link current" href="">Портфолио</a></li>
+          <li><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="nav-list">
+        <li><a class="nav-link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav-link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -33,85 +33,81 @@
         <!-- Спрятать заголовок h1 -->
         <h1>Наши работы</h1>
         <!-- Список кнопок -->
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="nav-list">
+          <li><button class="btn-portfolio" type="button">Все</button></li>
+          <li><button class="btn-portfolio" type="button">Веб-сайты</button></li>
+          <li><button class="btn-portfolio" type="button">Приложения</button></li>
+          <li><button class="btn-portfolio" type="button">Дизайн</button></li>
+          <li><button class="btn-portfolio" type="button">Маркетинг</button></li>
         </ul>
         <!-- Список ссылок на примеры  -->
-        <ul>
+        <ul class="nav-list">
           <li>
-            <a href=""><img src="./images/portfolilo/img-1.jpg" alt="фото сотрудников" /></a>
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a href=""
+              ><img src="./images/portfolilo/img-1.jpg" alt="фото сотрудников" width="370"
+            /></a>
+            <h2 class="portfolio-title">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolilo/img-2.jpg" alt="фото сотрудников" width="370px"
+              ><img src="./images/portfolilo/img-2.jpg" alt="играют в баскетбол" width="370"
             /></a>
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolilo/img-3.jpg" alt="играют в баскетбол" width="370px"
+              ><img src="./images/portfolilo/img-3.jpg" alt="логотип ресторана" width="370"
             /></a>
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+          <li>
+            <a href=""><img src="./images/portfolilo/img-4.jpg" alt="наушники" width="370" /></a>
+            <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li>
+            <a href=""><img src="./images/portfolilo/img-5.jpg" alt="две коробки" width="370" /></a>
+            <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolilo/img-4.jpg" alt="логотип ресторана" width="370px"
+              ><img src="./images/portfolilo/img-6.jpg" alt="монитор компьютера" width="370"
             /></a>
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolilo/img-5.jpg" alt="две коробки" width="370px"
+              ><img src="./images/portfolilo/img-7.jpg" alt="разворот журнала" width="370"
             /></a>
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li>
+            <a href=""><img src="./images/portfolilo/img-8.jpg" alt="ярлык" width="370" /></a>
+            <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolilo/img-6.jpg" alt="монитор компьютера" width="370px"
+              ><img src="./images/portfolilo/img-9.jpg" alt="работает на ноутбуке" width="370"
             /></a>
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/portfolilo/img-7.jpg" alt="разворот журнала" width="370px"
-            /></a>
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/portfolilo/img-8.jpg" alt="работает на ноутбуке" width="370px"
-            /></a>
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/portfolilo/img-9.jpg" alt="фото сотрудников" width="370px"
-            /></a>
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title" lang="en">Growing Business</h2>
+            <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer class="footer">
+      <a class="logo" href="">Web<span style="color: #ffffff">Studio</span></a>
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="footer-list">
+        <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
+        <li><a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
     </footer>
   </body>
