--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <nav class="navigation">
-        <a class="logo" href="">Web<span style="color: #000000">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span style="color: #000000">Studio</span></a>
         <ul class="nav-list">
           <li><a class="nav-link current" href="">Студия</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
@@ -111,7 +111,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="">Web<span style="color: #ffffff">Studio</span></a>
+      <a class="logo" href="./index.html">Web<span style="color: #ffffff">Studio</span></a>
       <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
       <ul class="footer-list">
         <li><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
