Исправляет ошибки после проверки ДЗ

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
     <main>
       <section>
         <!-- Спрятать заголовок h1 -->
-        <h1>Наши работы</h1>
+        <h1 class="visually-hidden">Наши работы</h1>
         <!-- Список кнопок -->
         <ul class="nav-list">
-          <li><button class="btn-portfolio" type="button">Все</button></li>
+          <li><button class="btn-portfolio active" type="button">Все</button></li>
           <li><button class="btn-portfolio" type="button">Веб-сайты</button></li>
           <li><button class="btn-portfolio" type="button">Приложения</button></li>
           <li><button class="btn-portfolio" type="button">Дизайн</button></li>
