--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Секция Особенности -->
       <section class="features">
         <!-- заголовок h2 Особенности спрятать -->
-        <h2>Особенности</h2>
+        <h2 class="visually-hidden">Особенности</h2>
         <ul class="features-list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
